--- a/projects/core/current/curl/postgres/reports/html/index.html
+++ b/projects/core/current/curl/postgres/reports/html/index.html
@@ -13,35 +13,35 @@
         <tbody>
         <tr><th>Collection</th><th>Result</th></tr>
         <tr><td><a href="./ApiToken_Resource.html">ApiToken Resource.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./Apps_Resource_Test.html">Apps Resource Test.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./Browser_Resource.html">Browser Resource.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./Bundle_Resource_Tests.html">Bundle Resource Tests.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./BundleResourceTests.html">BundleResourceTests.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./DotAsset-MultiPart-TempFile.html">DotAsset-MultiPart-TempFile.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./DotAsset.html">DotAsset.postman_collection.json</a></td>
     <td>PASS</td></tr>
-<tr><td><a href="./ESIndexResource.html">ESIndexResource.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
 <tr><td><a href="./ESIndexResourceTests.html">ESIndexResourceTests.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./FolderResource.html">FolderResource.postman_collection.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td>
     <td>PASS</td></tr>
-<tr><td><a href="./NavResource_Tests.html">NavResource Tests.json</a></td>
-    <td>FAIL</td></tr>
+<tr><td><a href="./Logger_Resource.html">Logger Resource.postman_collection.json</a></td>
+    <td>PASS</td></tr>
+<tr><td><a href="./NavResourceTests.html">NavResourceTests.json</a></td>
+    <td>PASS</td></tr>
 <tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./ResourceLink.html">ResourceLink.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td>
     <td>FAIL</td></tr>
         </tbody>
@@ -50,5 +50,5 @@
 </body>
 </html>
 
-  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/issue-18837-Unable-to-manage-content-types-if-there-is-no-index/projects/core/cee8bd0c/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
+  <h2 class="summaryGroup infoBox" style="margin: 40px; padding: 15px;"><a href="https://raw.githack.com/dotCMS/test-results/issue-18837-Unable-to-manage-content-types-if-there-is-no-index/projects/core/45578985/curl/postgres/logs/dotcms.log" target="_blank">dotcms.log</a></h2>
   
