--- a/projects/core/ebb4354a/curl/mysql/reports/html/index.html
+++ b/projects/core/ebb4354a/curl/mysql/reports/html/index.html
@@ -13,11 +13,11 @@
         <tbody>
         <tr><th>Collection</th><th>Result</th></tr>
         <tr><td><a href="./ApiToken_Resource.html">ApiToken Resource.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./Apps_Resource_Test.html">Apps Resource Test.postman_collection.json</a></td>
     <td>FAIL</td></tr>
 <tr><td><a href="./Browser_Resource.html">Browser Resource.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./Bundle_Resource_Tests.html">Bundle Resource Tests.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./BundleResourceTests.html">BundleResourceTests.json</a></td>
