--- a/projects/core/8fb82926/curl/postgres/reports/html/index.html
+++ b/projects/core/8fb82926/curl/postgres/reports/html/index.html
@@ -15,15 +15,15 @@
         <tr><td><a href="./ApiToken_Resource.html">ApiToken Resource.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./Apps_Resource_Test.html">Apps Resource Test.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./Browser_Resource.html">Browser Resource.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./BundleResourceTests.html">BundleResourceTests.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./DotAsset-MultiPart-TempFile.html">DotAsset-MultiPart-TempFile.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./DotAsset.html">DotAsset.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./ESIndexResourceTests.html">ESIndexResourceTests.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./FolderResource.html">FolderResource.postman_collection.json</a></td>
@@ -35,23 +35,23 @@
 <tr><td><a href="./Logger_Resource.html">Logger Resource.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./NavResourceTests.html">NavResourceTests.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./PortletResource.html">PortletResource.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./Reltionship_cache_in_push_publish.html">Reltionship_cache_in_push_publish.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./ResourceLink.html">ResourceLink.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./RoleResource.html">RoleResource.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./Save_Layout_With_Relative_Path.html">Save Layout With Relative Path.postman_collection.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
 <tr><td><a href="./Template_Resource.html">Template Resource.postman_collection.json</a></td>
     <td>PASS</td></tr>
 <tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td>
-    <td>FAIL</td></tr>
+    <td>PASS</td></tr>
         </tbody>
     </table>
 </div>
